manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: xo-helloworld
spec:
  ports:
  - name: xo-rest
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: xo-grpc
    protocol: TCP
    port: 9090
    targetPort: 9090
  selector:
      app: xo-helloworld
