manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xo-helloworld
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/connection-draining: "true"
    appgw.ingress.kubernetes.io/connection-draining-timeout: "30"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-dev-xo-helloworld
    cert-manager.io/acme-challenge-type: http01
spec:  
  tls:
    - hosts:
      - helloworld.azuredev.xhoto.com
      secretName: letsencrypt-secret-dev-xo-helloworld
  rules:
    - host: helloworld.azuredev.xhoto.com
      http:
        paths:
        - path: 
          backend:
            serviceName: xo-helloworld
            servicePort: 8080
